[package]
name = "meshanina"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2021"
description="Content-addressed, log-structured memory-mapped database"
license = "ISC"
repository="https://github.com/themeliolabs/meshanina"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
ethnum = "1.0.4"
zeroize = "1.4.3"
parking_lot = "0.11.1"
cache-padded = "1.1.1"
memmap = "0.7.0"
fs2 = "0.4.3"
log = "0.4.14"
blake3 = "1.2.0"
fastrand = "1.6.0"
# dashmap = "4"
libc = "0.2.125"
arrayref="0.3"
crc32fast = "1.3.0"
rustc-hash = "1.1.0"
once_cell = "1.9.0"
scopeguard = "1.1.0"
lru = "0.7.5"
file_offset = "0.1.1"
flume = "0.10.13"
oneshot = "0.1.3"
bytes = "1.2.1"
siphasher = "0.3.10"

[dev-dependencies]
criterion = "0.3"
once_cell="1"
rayon="1"


[[bench]]
name = "my_benchmark"
harness = false
