[package]
name = "meshanina"
version = "0.5.1"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2024"
description = "Content-addressed, log-structured memory-mapped database"
license = "ISC"
repository = "https://github.com/themeliolabs/meshanina"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
arrayref = "0.3"
blake3 = "1.2.0"
bytes = "1.2.1"
crc = "2.1.0"
crc32fast = "1.3.0"
ethnum = "1.0.4"
fastrand = "1.8.0"
fs2 = "0.4.3"
getrandom = "0.3.2"
hex = "0.4.3"
itertools = "0.10.5"
libc = "0.2.125"
log = "0.4.14"
memmap = "0.7.0"
once_cell = "1.9.0"
parking_lot = "0.11.1"
rustc-hash = "1.1.0"
scopeguard = "1.1.0"
siphasher = "0.3.10"
zeroize = "1.4.3"

[dev-dependencies]
criterion = "0.3"
once_cell = "1"
rayon = "1"
argh = "0.1"
dashmap = "5"
rand = "0.8"
tempfile = "3.19.1"

[profile.release]
debug = 2
